Update docs, add profile route
