# routes/users.js
@@ -17,9 +17,11 @@ router.get('/', Authentication.authenticate("admin"), UsersController.get);
 router.post('/register', UsersController.create);
 router.post('/signin', UsersController.signin);
 router.post('/signout', UsersController.signout);
+router.post('/resetPassword', UsersController.resetPassword);
+router.get('/profile', UsersController.getProfile);
 
-router.get('/:username', Authentication.authenticate("user"), UsersController.getByUid);
-router.patch('/:username', Authentication.authenticate("user"), UsersController.update);
-router.delete('/:username', Authentication.authenticate("admin"), UsersController.delete);
+router.get('/:uid', Authentication.authenticate("user"), UsersController.getByUid);
+router.patch('/:uid', Authentication.authenticate("user"), UsersController.update);
+router.delete('/:uid', Authentication.authenticate("admin"), UsersController.delete);
 
 module.exports = router;
